vlib/v/checker/tests/struct_field_unsign_type_check_err.vv
struct Foo {
mut:
	n u32 = -1
}

fn main() {
	mut foo := Foo{
		n: -1
	}

	foo.n = -1
}
